[gd_scene load_steps=20 format=3 uid="uid://o70x5igrlq30"]

[ext_resource type="Script" path="res://core/ui/card_ui/home/cardui_home.gd" id="1_a4a3j"]
[ext_resource type="PackedScene" uid="uid://c6fg6uvng0ovi" path="res://core/systems/input/input_watcher.tscn" id="2_d1wwx"]
[ext_resource type="PackedScene" uid="uid://shvyhrv5sx3v" path="res://core/systems/state/state_watcher.tscn" id="2_eo81q"]
[ext_resource type="Resource" uid="uid://oaavalv0wcoa" path="res://assets/state/states/home.tres" id="3_x1rvr"]
[ext_resource type="Resource" uid="uid://cadriyl38ny5y" path="res://assets/state/state_machines/popup_state_machine.tres" id="4_mrwia"]
[ext_resource type="PackedScene" uid="uid://bw8113ocotx2r" path="res://core/systems/effects/fade_effect.tscn" id="4_pbfsf"]
[ext_resource type="Resource" uid="uid://e7bbebwf7guj" path="res://assets/state/states/main_menu.tres" id="5_gbh30"]
[ext_resource type="Texture2D" uid="uid://d1mksukdkqorr" path="res://assets/images/placeholder-grid-banner.png" id="10_mmfgs"]
[ext_resource type="PackedScene" uid="uid://rosd00fxjrs8" path="res://core/ui/components/library_banner.tscn" id="11_16gcd"]
[ext_resource type="Shader" path="res://assets/shaders/god_rays.gdshader" id="11_r5mwe"]
[ext_resource type="PackedScene" uid="uid://b0cyl6fdqxevn" path="res://core/systems/input/scroller_joystick.tscn" id="12_h5dxg"]
[ext_resource type="PackedScene" uid="uid://bkhrcemal7uxo" path="res://core/ui/components/card.tscn" id="12_m30ge"]
[ext_resource type="PackedScene" uid="uid://crsu0vpicq0vh" path="res://core/ui/components/library_deck.tscn" id="13_rxwf5"]
[ext_resource type="Resource" uid="uid://bcr6c0281lb5b" path="res://assets/state/state_machines/menu_state_machine.tres" id="14_8pw3l"]
[ext_resource type="PackedScene" uid="uid://b76dvfuouhlwd" path="res://core/systems/state/state_updater.tscn" id="14_wdgux"]
[ext_resource type="Resource" uid="uid://boq501bigx8kl" path="res://assets/state/states/library.tres" id="16_6odlo"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bjg8e"]
shader = ExtResource("11_r5mwe")
shader_parameter/angle = 0.06
shader_parameter/position = -0.1
shader_parameter/spread = 0.674
shader_parameter/cutoff = 0.1
shader_parameter/falloff = 0.896
shader_parameter/edge_fade = 0.15
shader_parameter/speed = 6.995
shader_parameter/ray1_density = 8.0
shader_parameter/ray2_density = 30.0
shader_parameter/ray2_intensity = 0.184
shader_parameter/color = Color(0.888, 0.885, 1, 0.173)
shader_parameter/hdr = true
shader_parameter/seed = 1.505

[sub_resource type="Animation" id="Animation_638a6"]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer/BannerTexture:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_srvn2"]
_data = {
"fade_in": SubResource("Animation_638a6")
}

[node name="CardUIHome" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a4a3j")

[node name="InputWatcher" parent="." instance=ExtResource("2_d1wwx")]
stop_propagation = true
action = "ogui_east"

[node name="StateUpdater" parent="InputWatcher" instance=ExtResource("14_wdgux")]
state_machine = ExtResource("4_mrwia")
state = ExtResource("5_gbh30")
on_signal = "input_released"

[node name="StateWatcher" parent="." instance=ExtResource("2_eo81q")]
state = ExtResource("3_x1rvr")

[node name="FadeEffect" parent="StateWatcher" node_paths=PackedStringArray("target") instance=ExtResource("4_pbfsf")]
target = NodePath("../..")
on_signal = "state_entered"
fade_out_signal = "state_exited"
on_signal = "state_entered"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="BannerTexture" type="TextureRect" parent="VBoxContainer"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.1
texture = ExtResource("10_mmfgs")
expand_mode = 1
stretch_mode = 6

[node name="LibraryBanner" parent="VBoxContainer/BannerTexture" instance=ExtResource("11_16gcd")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="GodRaysShader" type="ColorRect" parent="VBoxContainer/BannerTexture"]
material = SubResource("ShaderMaterial_bjg8e")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.9
theme_type_variation = &"LightPanel"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 15

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/PanelContainer/MarginContainer"]
unique_name_in_owner = true
clip_contents = false
layout_mode = 2
horizontal_scroll_mode = 3
vertical_scroll_mode = 0

[node name="ScrollerJoystick" parent="VBoxContainer/PanelContainer/MarginContainer/ScrollContainer" instance=ExtResource("12_h5dxg")]

[node name="CardContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 30

[node name="StartSpacer" type="Control" parent="VBoxContainer/PanelContainer/MarginContainer/ScrollContainer/CardContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="Card" parent="VBoxContainer/PanelContainer/MarginContainer/ScrollContainer/CardContainer" instance=ExtResource("12_m30ge")]
layout_mode = 2
size_flags_horizontal = 2

[node name="Card2" parent="VBoxContainer/PanelContainer/MarginContainer/ScrollContainer/CardContainer" instance=ExtResource("12_m30ge")]
layout_mode = 2
size_flags_horizontal = 2

[node name="Card3" parent="VBoxContainer/PanelContainer/MarginContainer/ScrollContainer/CardContainer" instance=ExtResource("12_m30ge")]
layout_mode = 2
size_flags_horizontal = 2

[node name="Card4" parent="VBoxContainer/PanelContainer/MarginContainer/ScrollContainer/CardContainer" instance=ExtResource("12_m30ge")]
layout_mode = 2
size_flags_horizontal = 2

[node name="Card5" parent="VBoxContainer/PanelContainer/MarginContainer/ScrollContainer/CardContainer" instance=ExtResource("12_m30ge")]
layout_mode = 2
size_flags_horizontal = 2

[node name="Card6" parent="VBoxContainer/PanelContainer/MarginContainer/ScrollContainer/CardContainer" instance=ExtResource("12_m30ge")]
layout_mode = 2
size_flags_horizontal = 2

[node name="LibraryDeck" parent="VBoxContainer/PanelContainer/MarginContainer/ScrollContainer/CardContainer" instance=ExtResource("13_rxwf5")]
unique_name_in_owner = true
layout_mode = 2

[node name="StateUpdater" parent="VBoxContainer/PanelContainer/MarginContainer/ScrollContainer/CardContainer/LibraryDeck" instance=ExtResource("14_wdgux")]
state_machine = ExtResource("14_8pw3l")
state = ExtResource("16_6odlo")
on_signal = "button_up"

[node name="EndSpacer" type="Control" parent="VBoxContainer/PanelContainer/MarginContainer/ScrollContainer/CardContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_srvn2")
}
